@@ -30,9 +30,7 @@
  */
 
 /*
- * file_tree - ???
- *
- * chng: ...
+ * file_free - freefile function
  *
  */
 
@@ -48,7 +46,7 @@ FBCALL int fb_FileFree ( void )
 
 	FB_LOCK();
 
-    for( i = 1; i < (FB_MAX_FILES - FB_RESERVED_FILES); i++ ) {
+    for( i = 1; i <= (FB_MAX_FILES - FB_RESERVED_FILES); i++ ) {
         FB_FILE *handle = FB_FILE_TO_HANDLE(i);
         if (handle->hooks==NULL) {
 			FB_UNLOCK();
